...
                    .fillMaxWidth()
                    .padding(vertical = 8.dp, horizontal = 8.dp)
                    .testTag("GoalCard")
                ,
                colors = CardDefaults.cardColors(
...
                        onClick = { onDeleteButtonClick(goal.id) },
                        shape = CircleShape,
                        modifier = Modifier.size(30.dp).testTag("DeleteButton"),
                        contentPadding = PaddingValues(0.dp)
                    ) {
...
                        onClick = { onEditButtonClick(goal.id) },
                        shape = CircleShape,
                        modifier = Modifier.size(30.dp).testTag("EditButton"),
                        contentPadding = PaddingValues(0.dp)
                    ) {
...
            Row(modifier = Modifier
                .fillMaxWidth()
                .testTag("GoalHeader")
                ,
                horizontalArrangement = Arrangement.SpaceBetween) {
...
                    onValueChange = onSearchQueryChange,
                    label = { Text("Search...") },
                    modifier = Modifier.fillMaxWidth().testTag("GoalSearchBar"),
                    colors = TextFieldDefaults.colors(
                        focusedIndicatorColor = secondTextColor,
...
                        .background(mainBackgroundColor)
                        .height(900.dp)
                        .testTag("LoadingSpinner"),
                    horizontalAlignment = Alignment.CenterHorizontally,
                    verticalArrangement = Arrangement.Center
...
                        .background(mainBackgroundColor)
                        .height(600.dp)
                        .testTag("ErrorMessage"),
                    horizontalAlignment = Alignment.CenterHorizontally,
                    verticalArrangement = Arrangement.Center
...

            else -> {
                Scaffold(
                    modifier = Modifier
                        .testTag("Scaffold"),
...
                            verticalAlignment = Alignment.CenterVertically,
                            modifier = Modifier
                                .padding(start = 16.dp, top = 8.dp).testTag("TotalSpending")
                        ) {
                            Text(
...
                                modifier = Modifier
                                    .height(340.dp)
                                    .testTag("CatGif"),
                                horizontalAlignment = Alignment.CenterHorizontally,
                                verticalArrangement = Arrangement.Center
...
                            }
                            if (spendingSummary != null) {
                                Piechart(spendingSummary!!)
                            }
                            Column(
...
                                    modifier = Modifier
                                        .height(150.dp)
                                        .testTag("CatGifButton")
                                    ,
                                    onClick = {
...
                            }
                            if(levelStats != null) {
                                LevelBar(levelStats)
                            }
                        }
...
                                modifier = Modifier
                                    .padding(0.dp)
                                    .testTag("ToggleSpendingGoalsButton")
                                ,
                                onClick = {
...
                            for(expense in spendingSummary!!) {
                                val decoratedCategoryBreakdown = CategoryBreakdownDecorator(expense)
                                ExpenseCategoryCard(decoratedCategoryBreakdown)
                            }
                        } else {
                            if (deleteConfirmationDialogue) {
                                AlertDialog(
                                    onDismissRequest = { deleteConfirmationDialogue = false },
                                    title = { Text("Are you sure?") },
...
                            }
                        }
                        Spacer(Modifier.height(85.dp).testTag("BottomDashboard"))
                    }
                }
...
