...
                )
                Text(
                    text = "${expense.category_name}: ",
                    color = mainTextColor,
                    style = Typography.labelSmall,
                    modifier = Modifier
                        .padding(start=8.dp, top=8.dp,bottom=8.dp,end=8.dp).testTag("ExpenseCategoryCardName")
                )
            }
            Row(horizontalArrangement = Arrangement.End, verticalAlignment = Alignment.CenterVertically, modifier = Modifier.width(180.dp))
            {
                Column(modifier = Modifier.width(65.dp), horizontalAlignment = Alignment.End, verticalArrangement = Arrangement.Center) {
                    Text(
                        text = "${round(expense.percentage)}%",
                        color = PurpleGrey40,
                        style = Typography.labelSmall,
                        modifier = Modifier.testTag("ExpenseCategoryCardPercentage")
                    )
                }
                Spacer(modifier = Modifier.width(8.dp))
                Column(modifier = Modifier.width(100.dp), horizontalAlignment = Alignment.End, verticalArrangement = Arrangement.Center) {
                    Text(
                        text = "$${formatCurrency(expense.total_amount)}",
                        color = PurpleGrey40,
                        style = Typography.labelSmall,
                        modifier = Modifier.testTag("ExpenseCategoryCardTotalAmount")
                    )
                }
            }
        }

    }
...
