...
        painter = rememberAsyncImagePainter(
            ImageRequest.Builder(context).data(data = data).apply(block = {
                size(Size.ORIGINAL)
            }).build(), imageLoader = imageLoader
        ),
        contentDescription = contentDescription,
        modifier = Modifier.size(160.dp).testTag("CatGifImage"),
    )
}
