...
                    contentAlignment = Alignment.Center
                ) {
                    Icon(
                        imageVector = Icons.Filled.Star,
                        contentDescription = "Level",
                        modifier = Modifier.size(100.dp)
                            .padding(bottom = 10.dp).testTag("LevelIcon"),
                        tint = Color(0xFFEE8B38)
                    )
                    Text(
                        text = "${levelStats.level}",
                        color = Color.Black,
                        style = Typography.titleLarge,
...
